--- a/bower.json
+++ b/bower.json
@@ -8,10 +8,11 @@
     "angular-resource": "~1.5.0",
     "angular-cookies": "~1.5.0",
     "angular-sanitize": "~1.5.0",
-    "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.15",
-    "angular-validation-match": "~1.5.2"
+    "angular-validation-match": "~1.5.2",
+    "angular-messages": "^1.5.3",
+    "angular-material": "^1.0.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
