--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
   },
   "scripts": {
     "start": "node server",
+    "heroku": "grunt build --force && grunt buildcontrol:heroku",
     "test": "grunt test --force",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
