--- a/client/manifest.json
+++ b/client/manifest.json
@@ -2,6 +2,18 @@
   "name": "ACC BBQ",
   "icons": [
     {
+      "src": "assets/icons/android/sdpi.png",
+      "sizes": "36x36",
+      "type": "image\/png",
+      "density": 0.75
+    },
+    {
+      "src": "assets/icons/android/ldpi.png",
+      "sizes": "48x48",
+      "type": "image\/png",
+      "density": 1.0
+    },
+    {
       "src": "assets/icons/android/hdpi.png",
       "sizes": "72x72",
       "type": "image/png",
@@ -12,6 +24,18 @@
       "sizes": "96x96",
       "type": "image/png",
       "density": 2.0
+    },
+    {
+      "src": "assets/icons/android/xxhdpi.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "density": 3.0
+    },
+    {
+      "src": "assets/icons/android/xxxhdpi.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "density": 4.0
     }
   ],
   "start_url": "index.html",
