--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-validation-match": "~1.5.2",
     "angular-messages": "^1.5.3",
     "angular-material": "^1.0.7",
-    "ngstorage": "^0.3.10"
+    "ngstorage": "^0.3.10",
+    "cryptico": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
