--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "~0.3.0",
     "passport-local": "^1.0.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "uuid": "^2.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.0",
