--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.6.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
+    "moment": "^2.13.0",
     "mongoose": "^4.1.2",
     "morgan": "~1.7.0",
     "nodemailer": "^2.3.2",
