--- a/bower.json
+++ b/bower.json
@@ -14,9 +14,13 @@
     "angular-messages": "^1.5.3",
     "angular-material": "^1.0.7",
     "ngstorage": "^0.3.10",
-    "cryptico": "*"
+    "cryptico": "*",
+    "angular-animate": "^1.5.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
+  },
+  "resolutions": {
+    "angular": "~1.5.0"
   }
 }
