--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "grunt-injector": "^0.6.0",
     "grunt-jscs": "^2.1.0",
     "grunt-karma": "~0.12.0",
+    "grunt-manifest": "^0.4.4",
     "grunt-mocha-istanbul": "^3.0.1",
     "grunt-mocha-test": "~0.12.7",
     "grunt-newer": "^1.1.1",
