--- a/client/manifest.json
+++ b/client/manifest.json
@@ -1,44 +1,38 @@
 {
-  "name": "ACC Fixit",
+  "name": "Leads",
   "icons": [
     {
       "src": "assets/icons/android/sdpi.png",
       "sizes": "36x36",
-      "type": "image\/png",
-      "density": 0.75
+      "type": "image\/png"
     },
     {
       "src": "assets/icons/android/ldpi.png",
       "sizes": "48x48",
-      "type": "image\/png",
-      "density": 1.0
+      "type": "image\/png"
     },
     {
       "src": "assets/icons/android/hdpi.png",
       "sizes": "72x72",
-      "type": "image/png",
-      "density": 1.5
+      "type": "image/png"
     },
     {
       "src": "assets/icons/android/xhdpi.png",
       "sizes": "96x96",
-      "type": "image/png",
-      "density": 2.0
+      "type": "image/png"
     },
     {
       "src": "assets/icons/android/xxhdpi.png",
       "sizes": "144x144",
-      "type": "image/png",
-      "density": 3.0
+      "type": "image/png"
     },
     {
       "src": "assets/icons/android/xxxhdpi.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "density": 4.0
+      "type": "image/png"
     }
   ],
-  "start_url": "index.html",
+  "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
 }
