--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "~0.3.0",
     "passport-local": "^1.0.0",
+    "request-promise": "^3.0.0",
     "serve-favicon": "^2.3.0",
     "uuid": "^2.0.2"
   },
