--- a/client/manifest.json
+++ b/client/manifest.json
@@ -1,33 +1,33 @@
 {
-  "name": "Leads",
+  "name": "Solnet Leads",
   "icons": [
     {
-      "src": "assets/icons/android/sdpi.png",
+      "src": "assets/icons/android/android-chrome-36x36.png",
       "sizes": "36x36",
       "type": "image\/png"
     },
     {
-      "src": "assets/icons/android/ldpi.png",
+      "src": "assets/icons/android/android-chrome-48x48.png",
       "sizes": "48x48",
       "type": "image\/png"
     },
     {
-      "src": "assets/icons/android/hdpi.png",
+      "src": "assets/icons/android/android-chrome-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/android/xhdpi.png",
+      "src": "assets/icons/android/android-chrome-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/android/xxhdpi.png",
+      "src": "assets/icons/android/android-chrome-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/android/xxxhdpi.png",
+      "src": "assets/icons/android/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     }
