--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.13.3",
     "express-jwt": "^3.0.0",
     "express-session": "^1.11.3",
+    "inline-css": "^2.2.2",
     "jade": "^1.11.0",
     "jsonwebtoken": "^5.0.0",
     "lodash": "^4.6.1",
